# deskbooker

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  desk_map.py  pyproject.toml
deskbooker/: auth.py  daily_runner.py  deskbird_client.py  deskbooker.py
