[tool.poetry]
name = "deskbooker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
python-dateutil = "^2.8.2"
prettytable = "^3.3.0"

[tool.poetry.scripts]
deskbooker = 'deskbooker.deskbooker:main'

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.py$'

[tool.isort]
line_length=120
multi_line_output=3
include_trailing_comma=true
skip_glob = '^((?!py$).)*$'
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_third_party = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
